# dt-kernel-cleaner

./: CMakeLists.txt  README  main.cpp
